--- a/package.json
+++ b/package.json
@@ -1,38 +1,35 @@
 {
-  "name": "w3busmap",
-  "private": true,
+  "name": "thef2e-week2-bikemap",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.5.0-alpha.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "jssha": "^3.2.0",
     "leaflet": "^1.7.1",
-    "next": "12.0.4",
-    "next-images": "^1.8.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "postcss": "^8.3.11",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-leaflet": "^3.2.2",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.0.2",
-    "recoil": "^0.5.2",
-    "styled-components": "^5.3.3",
-    "swr": "^1.0.1",
+    "tailwindcss": "^3.0.0-alpha.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
-    "postcss": "^8.4.1",
+    "@vitejs/plugin-react": "^1.0.0",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.0-alpha.2"
+    "vite": "^2.6.4"
   }
 }
