--- a/package.json
+++ b/package.json
@@ -8,12 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+        "uuid": "^8.3.2",
+            "react-leaflet": "^3.2.2",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
+    "react-modal": "^3.14.4",
+        "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
+        "axios": "^0.24.0",
+    "jssha": "^3.2.0",
+    "leaflet": "^1.7.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "postcss": "^8.4.1",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.0.0-alpha.2"
   }
 }
