--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0-alpha.2",
     "@tailwindcss/typography": "^0.5.0-alpha.3",
+    "axios": "^0.24.0",
+    "jssha": "^3.2.0",
+    "leaflet": "^1.7.1",
     "next": "12.0.4",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-        "uuid": "^8.3.2",
-            "react-leaflet": "^3.2.2",
+    "react-leaflet": "^3.2.2",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-modal": "^3.14.4",
-        "react-router": "^6.0.2",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
-        "axios": "^0.24.0",
-    "jssha": "^3.2.0",
-    "leaflet": "^1.7.1"
+    "recoil": "^0.5.2",
+    "styled-components": "^5.3.3",
+    "swr": "^1.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
