--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "jssha": "^3.2.0",
     "leaflet": "^1.7.1",
+    "nanoid": "^3.1.30",
     "next": "12.0.4",
     "next-images": "^1.8.4",
     "react": "17.0.2",
@@ -24,8 +25,7 @@
     "react-router-dom": "^6.0.2",
     "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
-    "swr": "^1.0.1",
-    "uuid": "^8.3.2"
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
